@@ -147,6 +147,7 @@ def main(argv):
     if cl_args.remove_device is not None:
         print("[database] Removing all results for device '%s'" % cl_args.remove_device)
         remove_database_entries(database, {"clblast_device_name": cl_args.remove_device})
+                                           #, "kernel_family": "xgemm"})
         io.save_database(database, database_filename)
 
     # Adds new tuning parameters to existing database entries
